syntax = "proto3";

package inbs.v1;
import "common/v1/common.proto";

service INBSSBService {
  // Bi-directional streaming method
  rpc HandleINBMCommand(stream HandleINBMCommandResponse) returns (stream HandleINBMCommandRequest);

  // Used to send any kind of node status update
  rpc SendNodeUpdate(SendNodeUpdateRequest) returns (SendNodeUpdateResponse);
}

message HandleINBMCommandRequest {
  string request_id = 1;
  INBMCommand command = 2;
}

message HandleINBMCommandResponse {
  string request_id = 1;
  common.v1.Error error = 2;
}

message INBMCommand {
  oneof inbm_command {
    UpdateScheduledOperations update_scheduled_operations = 1;
    Ping ping = 2;
  }
}

message UpdateScheduledOperations {
  repeated common.v1.ScheduledOperation scheduled_operations = 1;
}

message Ping {}

message SendNodeUpdateRequest {
  string request_id = 1;
  oneof update {
    common.v1.Job job_update = 3; // node_id will be filled in by INBS; schedule_id, executed_by, desired_start_time, create_time will be ignored
    // more types of updates from nodes can be added in the future
  }
}

message SendNodeUpdateResponse {
  string request_id = 1;
  common.v1.Error error = 2;
}
